traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: value unary_! is not a member of Unit
  while (!posFinale()) {
         ^Snake:17: warning: enclosing method posFinale has result type Unit: return value discarded
      return !estFaceMur()
      ^Snake:26: warning: enclosing method posFinale has result type Unit: return value discarded
        return !estFaceMur()
        ^Snake:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^Snake:32: warning: enclosing method posFinale has result type Unit: return value discarded
        return false
        ^Snake:64: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:64: warning: enclosing method serpenter has result type Unit: return value discarded
      return false
      ^